<resources>
    <string name="app_name">DopaPillPartage</string>
    <string name="connexion">Connexion</string>
    <string name="seconnecter">Se connecter</string>
    <string name="mdpoublie">Mot de passe oublié ?</string>
    <string name="votremdp">Votre mot de passe</string>
    <string name="votremail">Votre adresse e-mail</string>
    <string name="annuler">Annuler</string>
    <string name="sinscrire">Inscrivez-vous</string>
    <string name="boutonsinscrire">Valider mon inscription</string>
    <string name="et_pseudo">Votre pseudo</string>
    <string name="et_email">Votre adresse e-mail</string>
    <string name="mdp">Votre mot de passe</string>
    <string name="mdpconfirmer">Confirmez votre mot de passe</string>
    <string name="creercompte">Créer un compte</string>
    <string name="vosid">Vos identifiants</string>
    <string name="suivant">Suivant</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="votrenom">Votre nom</string>
    <string name="votreprenom">Votre prénom</string>
    <string name="vousetes">Vous êtes</string>
    <string name="profilvalide">Profil validé!</string>
    <string name="installerunemontre">Installer une montre</string>
    <string name="ignoreretape">Ignorer cette étape</string>
    <string name="montre">Image de la montre</string>
    <string name="activerbluetooth">Veuillez activer votre Bluetooth</string>
    <string name="montreajoutee">Montre ajoutée avec succès!</string>

</resources>
