<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/seconnecter"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votremail"
            android:singleLine="true"
            android:layout_weight="0.125"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/mdppatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votremdp"
            android:singleLine="true"
            android:layout_weight="0.125"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.125"
            android:layout_gravity="center"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/boutonseconnecter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/seconnecter"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.125"
                android:gravity="center"
                android:onClick="onClick"
                android:clickable="true"
                android:text="@string/mdpoublie" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>